trying to fix the slight zooming issue on mobile devices

--- a/css/research.css
+++ b/css/research.css
@@ -133,6 +133,13 @@ ol > li::marker {
 
 @media(max-width: 900px){
 
+    /* in your CSS (near the top) */
+    html {
+    -webkit-text-size-adjust: 100%;
+        text-size-adjust: 100%;
+    }
+
+
     body {
       margin: 30px 10px;
       width: 100%;
